# duckdb_gsheets

./: .clangd  .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  Makefile  compile_flags.txt
.github/workflows/: MainDistributionPipeline.yml  SQLTests.yml  UnitTests.yml  deploy_docs.yml  python-app.yml
ci_scripts/: set_env_vars_for_tests.py
docs/pages/: development.md  index.md  oauth.md
scripts/: generate_google_token.py  test_sql.sh
src/: gsheets_auth.cpp  gsheets_copy.cpp  gsheets_extension.cpp  gsheets_get_token.cpp  gsheets_read.cpp  gsheets_requests.cpp  gsheets_utils.cpp
src/include/: gsheets_auth.hpp  gsheets_copy.hpp  gsheets_extension.hpp  gsheets_get_token.hpp  gsheets_read.hpp  gsheets_requests.hpp  gsheets_utils.hpp
src/include/sheets/: auth_factory.hpp  client.hpp  exception.hpp  range.hpp  types.hpp
src/include/sheets/auth/: auth_provider.hpp  bearer_token_auth.hpp  oauth_auth.hpp  service_account_auth.hpp
src/include/sheets/resources/: base.hpp  spreadsheet.hpp  values.hpp
src/include/sheets/transport/: client_factory.hpp  duckdb_http_client.hpp  http_client.hpp  http_type.hpp  httplib_client.hpp  mock_http_client.hpp
src/include/sheets/util/: encoding.hpp  response.hpp
src/include/utils/: options.hpp  proxy.hpp  secret.hpp  version.hpp
src/sheets/: auth_factory.cpp  range.cpp
src/sheets/auth/: bearer_token_auth.cpp  oauth_auth.cpp  service_account_auth.cpp
src/sheets/resources/: base.cpp  spreadsheet.cpp  values.cpp
src/sheets/transport/: client_factory.cpp  duckdb_http_client.cpp  http_client.cpp  httplib_client.cpp  mock_http_client.cpp
src/sheets/util/: encoding.cpp
src/utils/: options.cpp  proxy.cpp  secret.cpp  version.cpp
test/sql/: copy_to.test  copy_to_key_file.test  copy_to_range_flags.test  read_gsheet.test  read_gsheet_key_file.test  types.test
test/unit/: CMakeLists.txt
test/unit/sheets/: test_client.cpp  test_range.cpp
test/unit/sheets/auth/: test_auth.cpp
test/unit/sheets/resources/: test_spreadsheet.cpp  test_values.cpp
test/unit/sheets/util/: test_encoding.cpp
test/unit/stubs/: duckdb_stubs.cpp
